Fixed slider cards for overflow

--- a/client/src/components/WorkDoneSlider/WorkDoneSlider.scss
+++ b/client/src/components/WorkDoneSlider/WorkDoneSlider.scss
@@ -45,7 +45,7 @@
         overflow: auto;
 
         &::-webkit-scrollbar {
-          width: 5px;
+          height: 5px;
         }
 
         &::-webkit-scrollbar-thumb {
