--- a/client/src/components/WorkPostedSlider/WorkPostedSlider.scss
+++ b/client/src/components/WorkPostedSlider/WorkPostedSlider.scss
@@ -44,7 +44,7 @@
         overflow: auto;
 
         &::-webkit-scrollbar {
-          width: 5px;
+          height: 5px;
         }
 
         &::-webkit-scrollbar-thumb {
